[package]
name = "tower_web_dummy_service"
version = "1.0.0"
authors = ["victorinno <rotc21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
tokio = "0.1.22"
hyper = "0.12.10"
futures = "0.1.18"
serde = "1.0.110"
serde_derive = "1.0.110"
